# eopl-haskell

./: .gitignore  README.md
ch01/: SList.hi  SList.hs
ch01/1.15/: go.mod  main.go  main.hi  main.hs
ch01/1.16/: main.go  main.hi  main.hs
ch01/1.17/: main.go  main.hi  main.hs
ch01/1.18/: main.hi  main.hs
ch01/1.19/: main.hi  main.hs
ch01/1.20/: main.hi  main.hs
ch02/2.03/: DiffTree.hi  DiffTree.hs  main.hi  main.hs
ch02/2.05-07/: main.hi  main.hs
ch02/2.12/: main.hi  main.hs
ch02/2.15/: main.hs
ch02/2.18/: main.hs
ch02/2.31/: main.hs
ch03/: AST.dyn_hi  AST.dyn_o  AST.hi  AST.hs  Env.dyn_hi  Env.dyn_o  Env.hi  Evaluator.dyn_hi  Evaluator.dyn_o  Evaluator.hi  Evaluator.hs  Parser.dyn_hi  Parser.dyn_o  Parser.hi  Parser.hs  Parser.y  SList.hs  main.hi  main.hs  makefile
ch03/1-let/: AST.hs  Env.hs  Evaluator.hs  Parser.hs  Parser.y  main.hs
ch03/1-let/tests/: cond.txt  list1.txt  list3.txt  unpack-2.txt
ch03/3-2-let/: AST.hs
ch03/3-2-let/tests/: cond.txt  let.txt  print.txt
ch03/3-3-proc/: AST.hs  Parser.y
ch03/3-3-proc/tests/: let2.txt
ch03/3.2-let/: Env.hs  Evaluator.hs
ch03/3.2-let/tests/: list2.txt
ch03/3.3-proc/: Parser.hs
ch03/3.3-proc/tests/: let3.txt  list4.txt  minus.txt  print.txt  unpack-1.txt  var.txt
ch03/3.3.proc/: makefile  proc.cabal
ch03/3.3.proc/app/: Main.hs
ch03/3.3.proc/src/: AST.hs  Evaluator.hs  Lib.hs  Parser.y
ch03/3.3.proc/tests/: Spec.hs
ch03/3.3.proc/tests/TestFiles/: cond.txt  if.txt  let.txt  let2.txt  let3.txt  list1.txt  list2.txt  list3.txt  list4.txt  literal-bool.txt  literal-int.txt  minus.txt  print.txt  proc1.txt  proc2.txt  unpack-1.txt  unpack-2.txt  var.txt
ch03/tests/: if.txt  let.txt  minus.txt
